--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,18 @@
 body {
-    background-color: #343a40; /* Color celeste */
+    background-color: #FFD5E2; /* Color celeste */
 }
 
-.container {
-    width: 300px;
+.login {
     margin: auto; 
     padding: 20px; 
-    background-color: #fff;
-    border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); 
+    background-color: #F6E9F0;
 }
 
 .btn {
     width: 100%;
     margin-top: 10px;
+}
+.card{
+    background-color:#FFD5E2 ;
+    border: none;
 }
